--- a/src/app/chips-input-example.html
+++ b/src/app/chips-input-example.html
@@ -2,7 +2,7 @@
 <mat-label>Favorite Fruits</mat-label>
 <mat-chip-list #chipList cdkDropList aria-label="Fruit selection" (cdkDropListDropped)="drop($event)">
   <mat-chip *ngFor="let fruit of fruits" cdkDrag (removed)="remove(fruit)">
-    {{fruit.name}}
+    {{fruit}}
     <button matChipRemove>
       <mat-icon>cancel</mat-icon>
     </button>
@@ -17,10 +17,9 @@
 </mat-chip-list>
 </mat-form-field>
 
+<br><br>
 
 {{ fruits | json }}
-
-<button (click)="test()">test</button>
 <!-- Copyright 2022 Google LLC. All Rights Reserved.
   Use of this source code is governed by an MIT-style license that
   can be found in the LICENSE file at https://angular.io/license -->
